--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,33 @@
-language: ruby
-bundler_args: --without development
-before_install: rm Gemfile.lock || true
+---
 sudo: false
-script: "bundle exec rake test"
-rvm:
-  - 1.8.7
-  - 1.9.3
-  - 2.0.0
-  - 2.1.0
-env:
-  matrix:
-    - PUPPET_GEM_VERSION="~> 3.1.0"
-    - PUPPET_GEM_VERSION="~> 3.2.0"
-    - PUPPET_GEM_VERSION="~> 3.3.0"
-    - PUPPET_GEM_VERSION="~> 3.4.0"
-    - PUPPET_GEM_VERSION="~> 3.5.0"
-    - PUPPET_GEM_VERSION="~> 3.6.0"
-    - PUPPET_GEM_VERSION="~> 3.7.0"
-    - PUPPET_GEM_VERSION="~> 3.8.0"
+language: ruby
+bundler_args: --without system_tests
+before_install: rm Gemfile.lock || true
+script: bundle exec rake test
 matrix:
   fast_finish: true
-  exclude:
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 3.1.0"
-    - rvm: 2.1.0
-      env: PUPPET_GEM_VERSION="~> 3.1.0"
-    - rvm: 2.1.0
-      env: PUPPET_GEM_VERSION="~> 3.2.0"
-    - rvm: 2.1.0
-      env: PUPPET_GEM_VERSION="~> 3.3.0"
-    - rvm: 2.1.0
-      env: PUPPET_GEM_VERSION="~> 3.4.0"
-
+  include:
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 3.0"
+    - rvm: 1.9.3
+      env: PUPPET_GEM_VERSION="~> 3.0"
+    - rvm: 2.1.5
+      env: PUPPET_GEM_VERSION="~> 3.0"
+    - rvm: 2.1.5
+      env: PUPPET_GEM_VERSION="~> 3.0" FUTURE_PARSER="yes"
+    - rvm: 2.1.6
+      env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
+    - rvm: 2.1.5
+      sudo: required
+      services: docker
+      env: BEAKER_set="centos-6-x64-docker"
+      bundler_args:
+      script: sudo service docker restart ; sleep 10 ; bundle exec rake beaker
+    - rvm: 2.1.5
+      sudo: required
+      services: docker
+      env: BEAKER_set="centos-7-x64-docker"
+      bundler_args:
+      script: sudo service docker restart ; sleep 10 ; bundle exec rake beaker
 notifications:
   email: false
