--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,22 @@
 ---
-sudo: false
 language: ruby
 bundler_args: --without system_tests
 before_install: rm Gemfile.lock || true
-script: bundle exec rake test
+script: bundle exec rake release_checks
 matrix:
   fast_finish: true
   include:
-    - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 3.0"
-    - rvm: 1.9.3
-      env: PUPPET_GEM_VERSION="~> 3.0"
-    - rvm: 2.1.5
-      env: PUPPET_GEM_VERSION="~> 3.0"
-    - rvm: 2.1.5
-      env: PUPPET_GEM_VERSION="~> 3.0" FUTURE_PARSER="yes"
     - rvm: 2.1.6
       env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
-    - rvm: 2.1.5
+    - rvm: 2.4.2
+      env: PUPPET_GEM_VERSION="~> 5.0" STRICT_VARIABLES="yes"
+    - rvm: 2.4.0
       sudo: required
       services: docker
       env: BEAKER_set="centos-6-x64-docker"
       bundler_args:
       script: sudo service docker restart ; sleep 10 ; bundle exec rake beaker
-    - rvm: 2.1.5
+    - rvm: 2.4.0
       sudo: required
       services: docker
       env: BEAKER_set="centos-7-x64-docker"
