--- a/spec/acceptance/nodesets/centos-7-x64-docker.yml
+++ b/spec/acceptance/nodesets/centos-7-x64-docker.yml
@@ -1,7 +1,6 @@
 HOSTS:
   centos-7-x64:
     roles:
-      - master
       - agent
     platform: el-7-x86_64
     hypervisor: docker
@@ -11,7 +10,7 @@ HOSTS:
       - '/usr/sbin/init'
     docker_image_commands:
       - 'yum install -y tar wget cronie git'
-    docker_container_name: 'nfs'
+    docker_container_name: 'mock-el7'
 CONFIG:
   log_level: debug
   type: foss
