--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 spec/fixtures/modules/
 .rspec_system/
 /Vagrantfile
+log/
 
 # Ruby and RVM
 .ruby-version
@@ -18,3 +19,7 @@ Gemfile.lock
 
 # Puppet module generated
 pkg/
+
+# docs
+doc
+.yardoc
